--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-Port = 4000
+PORT = 4000
 dbConnection = mongodb+srv://Admin:12345@cluster0.hblvu.mongodb.net/Proyecto_04
 Secret_JWT=@Mi_Secret_Key@
